Actually fix dynamic haderabr visible rounded top corners
Previous fix only applied to selection-mode, keeping the normal headerbar affected.
This change replace border color with box-shadow and import some more code from
upstream fixing the issue globally and also reducing the diff.

--- a/gtk/src/light/gtk-3.20/_common.scss
+++ b/gtk/src/light/gtk-3.20/_common.scss
@@ -1593,12 +1593,12 @@ searchbar,
 headerbar {
   padding: 0 6px;
   min-height: 40px;
-  border-color: transparentize(_border_color($headerbar_bg_color), 0.7);
-  border-top-color: $headerbar_border_color;
-  border-style: solid;
   border-width: 0;
+  border-style: solid;
+  border-color: transparent;
+
+  box-shadow: inset 0 1px $headerbar_border_color; // top highlight
   border-top-width: 1px;
-  border-radius: 7px 7px 0 0;
   background-color: $headerbar_bg_color;
   color: $headerbar_fg_color;
   @if $variant=='dark' {
@@ -1764,12 +1764,8 @@ headerbar {
   .selection-mode & {
     $c: $success_color;
     color: $selected_fg_color;
-    border-color: _border_color($c);
-    /* top highlight border reveals hdyleaflet headerbar radius corners.
-     * Since hdyleaflet responsive design hides and shows headebars
-     * without any notice in CSS, it doesn't seem possible to disable
-     * the highlight color when not necessary. */
-    border-top-color: transparent;
+    border-color: transparent;
+    box-shadow: inset 0 1px lighten($c, 20%); // top highlight
     background-color: $c;
 
     ~ separator, separator {
@@ -1937,49 +1933,25 @@ headerbar {
   }
 }
 
-.background.tiled .titlebar,
-.background.tiled-top .titlebar,
-.background.tiled-right .titlebar,
-.background.tiled-bottom .titlebar,
-.background.tiled-left .titlebar,
-.background.maximized .titlebar,
-.background.solid-csd .titlebar {
+.background:not(.tiled):not(.maximized):not(.solid-csd) .titlebar,
+.background:not(.tiled-top):not(.maximized):not(.solid-csd) .titlebar,
+.background:not(.tiled-left):not(.maximized):not(.solid-csd) .titlebar,
+.background:not(.tiled-right):not(.maximized):not(.solid-csd) .titlebar,
+.background:not(.tiled-bottom):not(.maximized):not(.solid-csd) .titlebar {
   &:backdrop, & {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
   }
 }
-
 headerbar { // headerbar border rounding
-
-  window separator:first-child + &,
-  window &:first-child { &:backdrop, & { border-top-left-radius: 7px; }}
-  window &:last-child { &:backdrop, & { border-top-right-radius: 7px; }}
-
-  window stack & { // tackles the stacked headerbars case
+  window:not(.tiled):not(.maximized):not(.fullscreen):not(.solid-csd) separator:first-child + &, // tackles the paned container case
+  window:not(.tiled):not(.maximized):not(.fullscreen):not(.solid-csd) &:first-child { &:backdrop, & { border-top-left-radius: 7px; }}
+  window:not(.tiled):not(.maximized):not(.fullscreen):not(.solid-csd) &:last-child { &:backdrop, & { border-top-right-radius: 7px; }}
+  window:not(.tiled):not(.maximized):not(.fullscreen):not(.solid-csd) stack & { // tackles the stacked headerbars case
     &:first-child, &:last-child {
       &:backdrop, & {
         border-top-left-radius: 7px;
         border-top-right-radius: 7px;
-      }
-    }
-  }
-
-  window.tiled &,
-  window.tiled-top &,
-  window.tiled-right &,
-  window.tiled-bottom &,
-  window.tiled-left &,
-  window.maximized &,
-  window.fullscreen &,
-  window.solid-csd & {
-    &, &:backdrop {
-      &,
-      &:first-child,
-      &:last-child,
-      &:only-child {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
       }
     }
   }
